k8s/traefik/middle.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-amit-prefix
  namespace: amit
spec:
  stripPrefix:
    prefixes:
      - /amit/
